// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic function 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_linux_function_app\\": {
      \\"root_Function_9E43762E\\": {
        \\"app_settings\\": {
          \\"FUNCTIONS_WORKER_RUNTIME\\": \\"node\\",
          \\"WEBSITE_RUN_FROM_PACKAGE\\": \\"https://\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}.blob.core.windows.net/\${azurerm_storage_container.root_Function_FunctionBucket_B5F263FB.name}/\${azurerm_storage_blob.root_Function_CodeBlob_5AAEAFFA.name}\\"
        },
        \\"https_only\\": true,
        \\"identity\\": {
          \\"type\\": \\"SystemAssigned\\"
        },
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"function-c852aba6\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\",
        \\"service_plan_id\\": \\"\${azurerm_service_plan.root_ServicePlan_14459C66.id}\\",
        \\"site_config\\": {
          \\"application_stack\\": {
            \\"node_version\\": \\"16\\"
          }
        },
        \\"storage_account_access_key\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.primary_access_key}\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    },
    \\"azurerm_resource_group\\": {
      \\"root_ResourceGroup_72A9AFB6\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"Default-c82bf964\\"
      }
    },
    \\"azurerm_role_assignment\\": {
      \\"root_Function_ReadLambdaCodeAssignment_01DCF214\\": {
        \\"principal_id\\": \\"\${azurerm_linux_function_app.root_Function_9E43762E.identity[0].principal_id}\\",
        \\"role_definition_name\\": \\"Storage Blob Data Reader\\",
        \\"scope\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.id}\\"
      }
    },
    \\"azurerm_service_plan\\": {
      \\"root_ServicePlan_14459C66\\": {
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"Default-c82bf964\\",
        \\"os_type\\": \\"Linux\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\",
        \\"sku_name\\": \\"Y1\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_StorageAccount_3B92EC74\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"defaultc82bf964\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\"
      }
    },
    \\"azurerm_storage_blob\\": {
      \\"root_Function_CodeBlob_5AAEAFFA\\": {
        \\"name\\": \\"function-c852aba6.zip\\",
        \\"source\\": \\"<source>\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\",
        \\"storage_container_name\\": \\"\${azurerm_storage_container.root_Function_FunctionBucket_B5F263FB.name}\\",
        \\"type\\": \\"Block\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_Function_FunctionBucket_B5F263FB\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"functionbucket-c8ccf7e8\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    }
  }
}"
`;

exports[`basic function 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Function": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": false,
                },
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.15.2",
                    },
                    "id": "Asset",
                    "path": "root/Default/Function/Asset",
                  },
                  "CodeBlob": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.15.2",
                    },
                    "id": "CodeBlob",
                    "path": "root/Default/Function/CodeBlob",
                  },
                  "Function": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.15.2",
                    },
                    "id": "Function",
                    "path": "root/Default/Function/Function",
                  },
                  "FunctionBucket": {
                    "attributes": {
                      "wing:resource:connections": [],
                      "wing:resource:stateful": true,
                    },
                    "children": {
                      "Bucket": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.15.2",
                        },
                        "id": "Bucket",
                        "path": "root/Default/Function/FunctionBucket/Bucket",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.1.245",
                    },
                    "display": {
                      "description": "A cloud object store",
                      "title": "Bucket",
                    },
                    "id": "FunctionBucket",
                    "path": "root/Default/Function/FunctionBucket",
                  },
                  "ReadLambdaCodeAssignment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.15.2",
                    },
                    "id": "ReadLambdaCodeAssignment",
                    "path": "root/Default/Function/ReadLambdaCodeAssignment",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Function",
                "path": "root/Default/Function",
              },
              "Handler": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": false,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "An inflight resource",
                  "hidden": true,
                  "title": "Inflight",
                },
                "id": "Handler",
                "path": "root/Default/Handler",
              },
              "ResourceGroup": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.15.2",
                },
                "id": "ResourceGroup",
                "path": "root/Default/ResourceGroup",
              },
              "ServicePlan": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.15.2",
                },
                "id": "ServicePlan",
                "path": "root/Default/ServicePlan",
              },
              "StorageAccount": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.15.2",
                },
                "id": "StorageAccount",
                "path": "root/Default/StorageAccount",
              },
              "azure": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.15.2",
                },
                "id": "azure",
                "path": "root/Default/azure",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`basic function with environment variables 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_linux_function_app\\": {
      \\"root_Function_9E43762E\\": {
        \\"app_settings\\": {
          \\"BOOM\\": \\"BAM\\",
          \\"FOO\\": \\"BAR\\",
          \\"FUNCTIONS_WORKER_RUNTIME\\": \\"node\\",
          \\"WEBSITE_RUN_FROM_PACKAGE\\": \\"https://\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}.blob.core.windows.net/\${azurerm_storage_container.root_Function_FunctionBucket_B5F263FB.name}/\${azurerm_storage_blob.root_Function_CodeBlob_5AAEAFFA.name}\\"
        },
        \\"https_only\\": true,
        \\"identity\\": {
          \\"type\\": \\"SystemAssigned\\"
        },
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"function-c852aba6\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\",
        \\"service_plan_id\\": \\"\${azurerm_service_plan.root_ServicePlan_14459C66.id}\\",
        \\"site_config\\": {
          \\"application_stack\\": {
            \\"node_version\\": \\"16\\"
          }
        },
        \\"storage_account_access_key\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.primary_access_key}\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    },
    \\"azurerm_resource_group\\": {
      \\"root_ResourceGroup_72A9AFB6\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"Default-c82bf964\\"
      }
    },
    \\"azurerm_role_assignment\\": {
      \\"root_Function_ReadLambdaCodeAssignment_01DCF214\\": {
        \\"principal_id\\": \\"\${azurerm_linux_function_app.root_Function_9E43762E.identity[0].principal_id}\\",
        \\"role_definition_name\\": \\"Storage Blob Data Reader\\",
        \\"scope\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.id}\\"
      }
    },
    \\"azurerm_service_plan\\": {
      \\"root_ServicePlan_14459C66\\": {
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"Default-c82bf964\\",
        \\"os_type\\": \\"Linux\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\",
        \\"sku_name\\": \\"Y1\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_StorageAccount_3B92EC74\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"defaultc82bf964\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\"
      }
    },
    \\"azurerm_storage_blob\\": {
      \\"root_Function_CodeBlob_5AAEAFFA\\": {
        \\"name\\": \\"function-c852aba6.zip\\",
        \\"source\\": \\"<source>\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\",
        \\"storage_container_name\\": \\"\${azurerm_storage_container.root_Function_FunctionBucket_B5F263FB.name}\\",
        \\"type\\": \\"Block\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_Function_FunctionBucket_B5F263FB\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"functionbucket-c8ccf7e8\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    }
  }
}"
`;

exports[`basic function with environment variables 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Function": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": false,
                },
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.15.2",
                    },
                    "id": "Asset",
                    "path": "root/Default/Function/Asset",
                  },
                  "CodeBlob": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.15.2",
                    },
                    "id": "CodeBlob",
                    "path": "root/Default/Function/CodeBlob",
                  },
                  "Function": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.15.2",
                    },
                    "id": "Function",
                    "path": "root/Default/Function/Function",
                  },
                  "FunctionBucket": {
                    "attributes": {
                      "wing:resource:connections": [],
                      "wing:resource:stateful": true,
                    },
                    "children": {
                      "Bucket": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.15.2",
                        },
                        "id": "Bucket",
                        "path": "root/Default/Function/FunctionBucket/Bucket",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.1.245",
                    },
                    "display": {
                      "description": "A cloud object store",
                      "title": "Bucket",
                    },
                    "id": "FunctionBucket",
                    "path": "root/Default/Function/FunctionBucket",
                  },
                  "ReadLambdaCodeAssignment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.15.2",
                    },
                    "id": "ReadLambdaCodeAssignment",
                    "path": "root/Default/Function/ReadLambdaCodeAssignment",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Function",
                "path": "root/Default/Function",
              },
              "Handler": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": false,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "An inflight resource",
                  "hidden": true,
                  "title": "Inflight",
                },
                "id": "Handler",
                "path": "root/Default/Handler",
              },
              "ResourceGroup": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.15.2",
                },
                "id": "ResourceGroup",
                "path": "root/Default/ResourceGroup",
              },
              "ServicePlan": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.15.2",
                },
                "id": "ServicePlan",
                "path": "root/Default/ServicePlan",
              },
              "StorageAccount": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.15.2",
                },
                "id": "StorageAccount",
                "path": "root/Default/StorageAccount",
              },
              "azure": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.15.2",
                },
                "id": "azure",
                "path": "root/Default/azure",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`replace invalid character from function name 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_linux_function_app\\": {
      \\"root_someFunction01_Function_2D89D048\\": {
        \\"app_settings\\": {
          \\"FUNCTIONS_WORKER_RUNTIME\\": \\"node\\",
          \\"WEBSITE_RUN_FROM_PACKAGE\\": \\"https://\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}.blob.core.windows.net/\${azurerm_storage_container.root_someFunction01_FunctionBucket_E40551AF.name}/\${azurerm_storage_blob.root_someFunction01_CodeBlob_971120BF.name}\\"
        },
        \\"https_only\\": true,
        \\"identity\\": {
          \\"type\\": \\"SystemAssigned\\"
        },
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"somefunction01-c8eb4882\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\",
        \\"service_plan_id\\": \\"\${azurerm_service_plan.root_ServicePlan_14459C66.id}\\",
        \\"site_config\\": {
          \\"application_stack\\": {
            \\"node_version\\": \\"16\\"
          }
        },
        \\"storage_account_access_key\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.primary_access_key}\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    },
    \\"azurerm_resource_group\\": {
      \\"root_ResourceGroup_72A9AFB6\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"Default-c82bf964\\"
      }
    },
    \\"azurerm_role_assignment\\": {
      \\"root_someFunction01_ReadLambdaCodeAssignment_B72939BB\\": {
        \\"principal_id\\": \\"\${azurerm_linux_function_app.root_someFunction01_Function_2D89D048.identity[0].principal_id}\\",
        \\"role_definition_name\\": \\"Storage Blob Data Reader\\",
        \\"scope\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.id}\\"
      }
    },
    \\"azurerm_service_plan\\": {
      \\"root_ServicePlan_14459C66\\": {
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"Default-c82bf964\\",
        \\"os_type\\": \\"Linux\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\",
        \\"sku_name\\": \\"Y1\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_StorageAccount_3B92EC74\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.location}\\",
        \\"name\\": \\"defaultc82bf964\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_ResourceGroup_72A9AFB6.name}\\"
      }
    },
    \\"azurerm_storage_blob\\": {
      \\"root_someFunction01_CodeBlob_971120BF\\": {
        \\"name\\": \\"somefunction01-c8eb4882.zip\\",
        \\"source\\": \\"<source>\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\",
        \\"storage_container_name\\": \\"\${azurerm_storage_container.root_someFunction01_FunctionBucket_E40551AF.name}\\",
        \\"type\\": \\"Block\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_someFunction01_FunctionBucket_E40551AF\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"functionbucket-c84280f4\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_StorageAccount_3B92EC74.name}\\"
      }
    }
  }
}"
`;

exports[`replace invalid character from function name 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Handler": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": false,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "An inflight resource",
                  "hidden": true,
                  "title": "Inflight",
                },
                "id": "Handler",
                "path": "root/Default/Handler",
              },
              "ResourceGroup": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.15.2",
                },
                "id": "ResourceGroup",
                "path": "root/Default/ResourceGroup",
              },
              "ServicePlan": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.15.2",
                },
                "id": "ServicePlan",
                "path": "root/Default/ServicePlan",
              },
              "StorageAccount": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.15.2",
                },
                "id": "StorageAccount",
                "path": "root/Default/StorageAccount",
              },
              "azure": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.15.2",
                },
                "id": "azure",
                "path": "root/Default/azure",
              },
              "someFunction01": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": false,
                },
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.15.2",
                    },
                    "id": "Asset",
                    "path": "root/Default/someFunction01/Asset",
                  },
                  "CodeBlob": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.15.2",
                    },
                    "id": "CodeBlob",
                    "path": "root/Default/someFunction01/CodeBlob",
                  },
                  "Function": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.15.2",
                    },
                    "id": "Function",
                    "path": "root/Default/someFunction01/Function",
                  },
                  "FunctionBucket": {
                    "attributes": {
                      "wing:resource:connections": [],
                      "wing:resource:stateful": true,
                    },
                    "children": {
                      "Bucket": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.15.2",
                        },
                        "id": "Bucket",
                        "path": "root/Default/someFunction01/FunctionBucket/Bucket",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.1.245",
                    },
                    "display": {
                      "description": "A cloud object store",
                      "title": "Bucket",
                    },
                    "id": "FunctionBucket",
                    "path": "root/Default/someFunction01/FunctionBucket",
                  },
                  "ReadLambdaCodeAssignment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.15.2",
                    },
                    "id": "ReadLambdaCodeAssignment",
                    "path": "root/Default/someFunction01/ReadLambdaCodeAssignment",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "someFunction01",
                "path": "root/Default/someFunction01",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
